alignment fix

--- a/styles.css
+++ b/styles.css
@@ -110,24 +110,25 @@ section {
 
 
 h2 {
+  margin-top: 1rem;
   font-size: 2rem;
   color: var(--primary-color)
   }
 
 .welcome-title {
+  place-items: center;
+  gap: 1.5rem;
   color: var(--accent-color);
-  font-size: 4rem;
+  font-size: 0;
   display: flex;
   margin: 0 auto;
   transition: opacity 2s;
   text-transform: uppercase;
 }
-.welcome-title {
-  font-size: 0;
-}
+
 .welcome-title span {
   font-size: 5rem;
-  padding: 0 5px 0 0;
+  padding: 0 2px 0 0;
 }
 
 
@@ -163,12 +164,8 @@ h2 {
   animation:  fadein 7s linear;
 }
 .welcome-title-one span:nth-child(4),
-.welcome-title-two span:first-child,
-.welcome-title-two span:last-child{
+.welcome-title-two span:first-child {
   animation:  fadein-special 4s linear;
-}
-.welcome-title-one span:nth-child(6){
-  margin:0 1rem;
 }
 
 /* Projects */
@@ -277,13 +274,12 @@ h2 {
   }
   .welcome-title {
     flex-direction: column;
+    gap: 0.5rem;
   }
-  .welcome-title-one span:nth-child(6){
-    margin: none;
-  }
+ 
   .welcome-title span {
     font-size: 3rem;
-    padding: 0 5px 0 0;
+    
   }
   .projects-container {
     grid-template-columns: none;
